disabled emulator ui

--- a/firebase.json
+++ b/firebase.json
@@ -45,7 +45,7 @@
         "port": 5000
       },
       "ui": {
-        "enabled": true
+        "enabled": false
       },
       "singleProjectMode": true,
       "auth": {
